@startuml

title __SERIETV's Class Diagram__\n

  namespace com.unisa.cinehub {
    namespace views.serietv {
      class com.unisa.cinehub.views.serietv.InfoSerieTvView {
          + InfoSerieTvView()
          + setParameter()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.serietv {
      class com.unisa.cinehub.views.serietv.SerieTvView {
          + SerieTvView()
          - prepare()
      }
    }
  }
  

  com.unisa.cinehub.views.serietv.InfoSerieTvView .up.|> com.vaadin.flow.router.HasUrlParameter
  com.unisa.cinehub.views.serietv.InfoSerieTvView -up-|> com.vaadin.flow.component.html.Div
  com.unisa.cinehub.views.serietv.InfoSerieTvView o-- com.unisa.cinehub.control.CatalogoControl : catalogoControl
  com.unisa.cinehub.views.serietv.SerieTvView -up-|> com.vaadin.flow.component.html.Div
  com.unisa.cinehub.views.serietv.SerieTvView o-- com.unisa.cinehub.control.CatalogoControl : catalogoControl


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
